# all_about_gans

./: .gitignore  DCGAN_MNIST.ipynb  README.md  analysis.ipynb  cgan.py  dcgan.py  pyproject.toml  vae.py
GANs/GANs/: ContentView.swift  GANsApp.swift  Utils.swift
GANs/GANs.xcodeproj/: project.pbxproj
GANs/GANs.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
GANs/GANs.xcodeproj/project.xcworkspace/xcuserdata/captain-mac.xcuserdatad/: UserInterfaceState.xcuserstate
GANs/GANs/Assets.xcassets/AccentColor.colorset/: Contents.json
GANs/GANs/Assets.xcassets/AppIcon.appiconset/: Contents.json
GANs/GANs/Assets.xcassets/Background.colorset/: Contents.json
GANs/GANs/Assets.xcassets/CardColor.colorset/: Contents.json
GANs/GANs/Assets.xcassets/MNIST.colorset/: Contents.json
GANs/GANs/Assets.xcassets/VAECIFAR10.colorset/: Contents.json
GANs/GANs/Assets.xcassets/VAEQuickDraw8.colorset/: Contents.json
GANs/GANs/Screens/: ContentView.swift  GenerationView.swift
GANs/GANs/Utils/: MLXArray+.swift  NativeImage.swift  UpsamplingConv2d.swift  Utils.swift  ViewModifiers.swift
GANs/GANs/ViewModels/: ViewModel.swift
GANs/GANs/Weights/: cvae_epoch_120.safetensors  decoder_weights_150.safetensors  generator_epoch_20.safetensors
cifar_10/dcgan/: main.py
cifar_10/dcgan/torch/: gan_cifar.py  test.py
cifar_10/vae/: main.py  main_silu.py  test.py  vae.py  vae_silu.py
ipynb/: vae.ipynb
mnist/digits/: dcgan.py
mnist/fashion/: test.py  vae.py
quick_draw/vae/: cvae.py  dataset.py  eda.ipynb  run.sh  test.py
(+17 files in other folders)
